<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    tools:context="com.CreateCompte">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:cardElevation="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="100dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/text_bienvenu"
            android:paddingBottom="20dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_create_account"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_account"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:textSize="15dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/text_color"
                android:text="@string/button_ins"
                android:textSize="20dp"
                android:backgroundTint="@color/color_statut"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_con"
                android:layout_marginStart="15dp"
                android:textSize="20dp"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/blue"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>