<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    tools:context="com.Connexion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/retour"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/outline_arrow_back_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_connexion"
            android:textSize="25dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:paddingBottom="40dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_connexion_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:paddingBottom="50dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:hintTextColor="@color/black"
            app:boxCornerRadiusBottomEnd="20dp"
            android:layout_marginBottom="35dp"
            android:hint="@string/placeholder_adress">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:drawableTint="@color/blue"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/outline_attach_email_24"
                android:drawablePadding="10dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            app:hintTextColor="@color/black"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/placeholder_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/MotDePasse"
                android:layout_height="wrap_content"
                android:drawableTint="@color/blue"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:drawableStart="@drawable/outline_admin_panel_settings_24"
                android:drawablePadding="10dp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_connexion"
            android:textSize="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/blue"
            android:id="@+id/menu"
            android:layout_marginBottom="25dp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_connecion_text_fin"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>