<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    tools:context="com.Inscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/retour"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/outline_arrow_back_24"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_ins"
            android:textSize="30dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingBottom="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/outline_account_circle_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_adress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/outline_attach_email_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/motdepasse"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_admin_panel_settings_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:hintTextColor="@color/black"
                android:layout_marginBottom="30dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmMotdepasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_admin_panel_settings_24"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:drawableTint="@color/blue">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/page_ins"
                android:textSize="20dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/info"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>